--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
+    "passport-jwt": "^4.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
